Improved Trainer and added ability to run battles in a headless mode