@@ -1,6 +1,7 @@
 #!/bin/bash
 
 ROBOCODE_HOME=~/robocode
+ENEMY_ROBOT=sample.VelociRobot
 
 print_usage() {
     printf "Usage:\n"
@@ -34,28 +35,42 @@ then
     then
         # compile the robot
         compile "sergey/lavrenyuk/Perceptron.java"
-        # compile tests, otherwise Robocode complains
+
+        # compile the trainer
+        compile "sergey/lavrenyuk/nn/training/Trainer.java"
+
+        # compile tests
         compile "sergey/lavrenyuk/test/*.java"
     elif [ $1 == "clean" ]
     then
         clean
     elif [ $1 == "test" ]
     then
-        compile "sergey/lavrenyuk/test/*.java"
         execute "sergey.lavrenyuk.test.Runner"
     elif [ $1 == "training" ]
     then
-        compile "sergey/lavrenyuk/nn/training/TrainerRunner.java"
-        execute "sergey.lavrenyuk.nn.training.TrainerRunner"
+        execute "sergey.lavrenyuk.nn.training.Trainer"
     elif [ $1 == "scoring" ]
     then
+        # remind user to check 'config.properties'
         printf "\nVerify 'config.properties' file:\n"
         printf "    neuralNetwork.mode=scoring\n"
         printf "    scoring.roundsPerMatrix value is correct\n"
 
+        # read number of rounds to run
         read -p "Rounds = " rounds
-        printf "Confirm and continue? Y/N\n"
-        read input
+
+        # create battle file with rounds to run and enemy robot class
+        sed -E "s/{NUM_ROUNDS}/$rounds/; s/{ENEMY_ROBOT}/$ENEMY_ROBOT/" $ROBOCODE_HOME/robots/sergey/lavrenyuk/data/template.battle > $ROBOCODE_HOME/battles/sergey_lavrenyuk.battle
+
+        # run Robocode without UI. it has to be launched from its root directory. copied from $ROBOCODE_HOME/robocode.sh
+        work_dir=`pwd`
+        cd $ROBOCODE_HOME
+        java -Xmx512M -classpath libs/robocode.jar -XX:+IgnoreUnrecognizedVMOptions "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" "--add-opens=java.desktop/sun.awt=ALL-UNNAMED" robocode.Robocode -battle sergey_lavrenyuk.battle -nodisplay -nosound -tps 10000
+        cd "$work_dir"
+
+        # delete battle file
+        rm $ROBOCODE_HOME/battles/sergey_lavrenyuk.battle
     else
         print_usage
     fi
